unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/bt_stripe__Stripe_Customer__c.object-meta.xml
<CustomObject>
    <description>Payment Gateway Customer records store customer data that is kept in sync with the Payment Gateway system. A Payment Gateway Customer can be related to an Account, Contact or Lead and a Payment Gateway Customer record can have many Payment Methods associated to it.</description>
    <label>Payment Gateway Customer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Gateway Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>