unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Account__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Salesforce Account related to this Gateway Customer. (Optional)</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Gateway Customers</relationshipLabel>
    <relationshipName>Stripe_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>