unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Account_Balance__c</fullName>
    <description>The customer&#39;s current balance, which affect the customer&#39;s future invoices.</description>
    <inlineHelpText>The customer&#39;s current balance, which affect the customer&#39;s future invoices.</inlineHelpText>
    <label>Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>