unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Billing_Country__c</fullName>
    <description>The Billing City of the Customer . Set automatically if the Account lookup is set and the record saved.</description>
    <inlineHelpText>The Shipping City of the Customer . Set automatically if the Account lookup is set and the record saved.</inlineHelpText>
    <label>Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>