unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Billing_Postal_Code__c</fullName>
    <description>The billing postal code (zip) of the Customer. Set automatically if the Account lookup is set and the record saved.</description>
    <inlineHelpText>The billing postal code (zip) of the Customer . Set automatically if the Account lookup is set and the record saved.</inlineHelpText>
    <label>Billing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>