unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Billing_State__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Billing_State__c</fullName>
    <description>The billing state of the Customer . Set automatically if the Account lookup is set and the record saved.</description>
    <inlineHelpText>The billing state of the Customer. Set automatically if the Account lookup is set and the record saved.</inlineHelpText>
    <label>Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>