unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Billing_Street2__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Billing_Street2__c</fullName>
    <description>The billing street of the Customer. Set automatically if the Account lookup is set and the record saved.</description>
    <inlineHelpText>The billing street of the Customer. Set automatically if the Account lookup is set and the record saved.</inlineHelpText>
    <label>Billing Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>