unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Contact__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Salesforce Contact related to this Gateway Customer. (Optional)</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Gateway Customers</relationshipLabel>
    <relationshipName>Stripe_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>