unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Coupon__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The code of the coupon to apply to subscriptions.</inlineHelpText>
    <label>Coupon</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>bt_stripe__Coupon2__c.bt_stripe__Payment_Gateway__c</field>
            <operation>equals</operation>
            <valueField>$Source.bt_stripe__Payment_Gateway__c</valueField>
        </filterItems>
        <filterItems>
            <field>bt_stripe__Coupon2__c.bt_stripe__Valid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>bt_stripe__Coupon2__c.bt_stripe__Deleted_From_Stripe__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>bt_stripe__Coupon2__c</referenceTo>
    <relationshipLabel>Stripe Customers</relationshipLabel>
    <relationshipName>Stripe_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>