unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Created_Date__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Created_Date__c</fullName>
    <inlineHelpText>The date and time this Customer was created in Gateway.</inlineHelpText>
    <label>Created In Gateway</label>
    <type>DateTime</type>
</CustomField>