unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Default_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Default_Source_Id__c</fullName>
    <description>Gateway ID of this Customer&#39;s primary Payment Method.</description>
    <inlineHelpText>Gateway ID (if supported) of this Customer &#39;s primary Payment Method.</inlineHelpText>
    <label>Default Source ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>