unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Deleted_From_Stripe__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Deleted_From_Stripe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted From Payment Gateway</label>
    <type>Checkbox</type>
</CustomField>