unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Description__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Description__c</fullName>
    <description>Payment Gateway Customer Description.</description>
    <inlineHelpText>Payment Gateway Customer Description.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>