unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Email__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Email__c</fullName>
    <inlineHelpText>The email address related to this Gateway Customer.</inlineHelpText>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>