unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Invoice_Prefix__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Invoice_Prefix__c</fullName>
    <label>Invoice Prefix</label>
    <length>12</length>
    <type>Text</type>
</CustomField>