unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Merchant_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Merchant_Customer_Id__c</fullName>
    <label>Merchant Customer Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>