unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Payment Gateway related to this Customer. Each Customer can only be related to 1 Payment Gateway.</inlineHelpText>
    <label>Payment Gateway</label>
    <referenceTo>bt_stripe__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Payment Gateway Customers</relationshipLabel>
    <relationshipName>Stripe_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>