unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Phone__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Phone__c</fullName>
    <description>The phone number of the Customer. Set automatically if the Account is set and the record is saved.</description>
    <inlineHelpText>The phone number of the Customer. Set automatically if the Account is set and the record is saved.</inlineHelpText>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>