unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Shipping_City__c</fullName>
    <description>The Shipping City of the Customer . Set automatically if the Account lookup is set and the record saved.</description>
    <inlineHelpText>The Shipping City of the Customer . Set automatically if the Account lookup is set and the record saved.</inlineHelpText>
    <label>Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>