unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Shipping_Name__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Shipping_Name__c</fullName>
    <label>Shipping Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>