unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Shipping_Phone__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Shipping_Phone__c</fullName>
    <description>The phone number of the Customer.</description>
    <inlineHelpText>The phone number of the Customer.</inlineHelpText>
    <label>Shipping Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>