unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Shipping_Postal_Code__c</fullName>
    <description>The postal code (zip) of the Customer. Set automatically if the Account lookup is set and the record saved.</description>
    <inlineHelpText>The postal code (zip) of the Customer . Set automatically if the Account lookup is set and the record saved.</inlineHelpText>
    <label>Shipping Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>