unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Shipping_Street1__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Shipping_Street1__c</fullName>
    <description>The street of the Customer. Set automatically if the Account lookup is set and the record saved.</description>
    <inlineHelpText>The street of the Customer. Set automatically if the Account lookup is set and the record saved.</inlineHelpText>
    <label>Shipping Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>