unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Stripe_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_Customer_Name__c</fullName>
    <description>Customer Name as viewed on Stripe Dashboard.</description>
    <formula>IF(bt_stripe__Email__c != null , bt_stripe__Email__c, bt_stripe__Description__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer Name as viewed on Stripe Dashboard.</inlineHelpText>
    <label>Stripe Customer Name</label>
    <type>Text</type>
</CustomField>