unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/fields/bt_stripe__Stripe_URL__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_URL__c</fullName>
    <formula>IF(TEXT(bt_stripe__Payment_Gateway__r.bt_stripe__Provider__c)==&#39;Stripe&#39;,IF(bt_stripe__Payment_Gateway__r.bt_stripe__Test_Mode__c ,HYPERLINK(&#39;https://dashboard.stripe.com/test/customers/&#39;+bt_stripe__Customer_Id__c,&#39;View&#39;),HYPERLINK(&#39;https://dashboard.stripe.com/customers/&#39;+bt_stripe__Customer_Id__c,&#39;View&#39;)),&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The URL for the record in Stripe.</inlineHelpText>
    <label>Stripe URL</label>
    <type>Text</type>
</CustomField>