unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/validationRules/bt_stripe__Must_Be_Valid_Email_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>bt_stripe__Must_Be_Valid_Email_Format</fullName>
    <active>true</active>
    <description>Ensures the value entered is in email address format.</description>
    <errorConditionFormula>AND(
                NOT($Setup.bt_stripe__Stripe_Settings__c.bt_stripe__Disable_Customer_Email_Validation__c),
                NOT(ISBLANK(bt_stripe__Email__c)),
                NOT(REGEX(bt_stripe__Email__c, &quot;^[A-Za-z0-9._%+-/!#$%&amp;&#39;*=?^_`{|}~]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$&quot;))
            )</errorConditionFormula>
    <errorMessage>Email entered must be valid email address format.</errorMessage>
</ValidationRule>