unpackaged/main/default/objects/bt_stripe__Stripe_Customer__c/listViews/bt_stripe__All.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Contact__c</columns>
    <columns>bt_stripe__Account__c</columns>
    <columns>bt_stripe__Email__c</columns>
    <columns>bt_stripe__Payment_Gateway__c</columns>
    <columns>bt_stripe__Created_Date__c</columns>
    <columns>bt_stripe__Customer_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>